# dev-mcps

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  REVIEW.md  test_orchestrator_debug.sh
dap/: Cargo.toml  README.md
dap/src/: da.rs  main.rs  mcp.rs
lsif/: Cargo.toml  README.md
lsif/src/: lsif.rs  main.rs
lsp/: AGENTS.md  Cargo.toml  README.md
lsp/.github/workflows/: ci.yml
lsp/src/: ls.rs  main.rs  mcp.rs
orchestrator/: ARCHITECTURE.md  Cargo.toml  NOTIFICATIONS.md  PLANNING.md  README.md  TESTING.md  codex_mcp_server.md
orchestrator/src/: codex.rs  lib.rs  main.rs  mcp.rs  protocol_types.rs
orchestrator/tests/: conversation_management.rs  e2e.rs  event_orchestration.rs  initialize_timeout.rs  manager_integration.rs  multiple_conversations.rs  real_codex_integration.rs  send_user_turn_defaults.rs  util.rs
rmcp-examples/clients/src/: collection.rs  progress_client.rs
rmcp-examples/servers/src/common/: counter.rs
scripts/: deploy-symlinks.sh  run_lsp_symbols.sh
