[package]
name = "codex-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2"

 

 
