[package]
name = "codex-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
which = "6"
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
