[package]
name = "codex-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
which = "6"
rmcp = { workspace = true, features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "schemars",

    # optional, may be useful later
    # "auth",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
schemars = "1.0"
once_cell = "1.19"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
